--- a/Services/cluster-manager/cluster-manager.csproj
+++ b/Services/cluster-manager/cluster-manager.csproj
@@ -8,6 +8,7 @@
     <ServerGarbageCollection>true</ServerGarbageCollection>
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
     <AssemblyName>cluster-manager</AssemblyName>
+    <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
