--- a/Services/test-cadence/test-cadence.csproj
+++ b/Services/test-cadence/test-cadence.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>CadenceTester</RootNamespace>
+    <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
