--- a/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
+++ b/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -20,6 +20,7 @@ This is a cloned and slightly updated build of https://www.nuget.org/packages/SS
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>ssh scp sftp</PackageTags>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <PackageIconUrl>https://doc.neonkube.com/images/nuget-icon.png</PackageIconUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
