--- a/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
+++ b/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
@@ -22,6 +22,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <AssemblyName>Neon.Xunit.Cadence</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
+    <PackageIconUrl>https://doc.neonkube.com/images/nuget-icon.png</PackageIconUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
