--- a/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
+++ b/Lib/Neon.Xunit.Couchbase/Neon.Xunit.Couchbase.csproj
@@ -20,6 +20,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIconUrl>https://doc.neonkube.com/images/nuget-icon.png</PackageIconUrl>
+    <PackageTags>xunit couchbase</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
