--- a/Lib/Neon.Xunit.Kube/Neon.Xunit.Kube.csproj
+++ b/Lib/Neon.Xunit.Kube/Neon.Xunit.Kube.csproj
@@ -22,6 +22,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIconUrl>https://doc.neonkube.com/images/nuget-icon.png</PackageIconUrl>
+    <PackageTags>xunit kubernetes</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
