--- a/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
+++ b/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Renci.SshNet</RootNamespace>
-    <Version>0.7.0</Version>
+    <Version>0.7.1</Version>
     <Company>Renci</Company>
     <Product>SSH.NET</Product>
     <Description>SSH.NET is a Secure Shell (SSH) library for .NET, optimized for parallelism.
