--- a/Lib/Neon.Common/Neon.Common.csproj
+++ b/Lib/Neon.Common/Neon.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,13 +6,13 @@
     <Version>0.7.1</Version>
     <Company>neonFORGE, LLC</Company>
     <Authors>Jeff Lill</Authors>
-    <Description>neonKUBE common library.</Description>
+    <Description>Neon common library.</Description>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases
 </PackageReleaseNotes>
     <Copyright>Copyright © 2016-2019 by neonFORGE LLC.  All rights reserved.</Copyright>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
-    <Product>neonKUBE</Product>
+    <Product>Neon</Product>
     <LangVersion>latest</LangVersion>
     <IsPackable>true</IsPackable>
     <PackageLicenseUrl></PackageLicenseUrl>
