--- a/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
+++ b/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Lib\Neon.Cadence\Neon.Cadence.csproj" />
     <ProjectReference Include="..\..\..\Lib\Neon.Common\Neon.Common.csproj" />
+    <ProjectReference Include="..\..\..\Lib\Neon.Xunit.Cadence\Neon.Xunit.Cadence.csproj" />
+    <ProjectReference Include="..\..\..\Lib\Neon.Xunit\Neon.Xunit.csproj" />
   </ItemGroup>
 
 </Project>
