--- a/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
+++ b/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
@@ -6,6 +6,14 @@
     <StartupObject>HelloWorld.Program</StartupObject>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1998</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1998</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\Lib\Neon.Cadence\Neon.Cadence.csproj" />
     <ProjectReference Include="..\..\..\Lib\Neon.Common\Neon.Common.csproj" />
